# QuickSnap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: PKGBUILD
src/: clipboard.rs  gnome.rs  main.rs  portal.rs
