[package]
name = "quicksnap"
version = "0.1.0"
edition = "2021"
description = "Minimal screenshot tool: drag a rectangle, get it on the clipboard."
license = "GPL-3.0-or-later"
repository = "https://github.com/SnowTimSwiss/QuickSnap"

[dependencies]
zbus = { version = "4", features = ["blocking"] }

[profile.release]
lto = true
strip = true

[package.metadata.deb]
maintainer = "QuickSnap contributors"
section = "graphics"
priority = "optional"
depends = "wl-clipboard"
assets = [
    ["target/release/quicksnap", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/quicksnap/README.md", "644"],
]

[package.metadata.generate-rpm]
license = "GPLv3+"
assets = [
    { source = "target/release/quicksnap", dest = "/usr/bin/quicksnap", mode = "755" },
]
[package.metadata.generate-rpm.requires]
wl-clipboard = "*"
